--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "name": "clock-store-api",
+  "version": "1.0.0",
+  "description": "REST API for clock store management system",
   "type": "module",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
